ingresses/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: multipl
spec:
  rules:
  - host: multipl.io
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: 7000
