ingresses/multipl.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: multipl
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - multipl.io
    - www.multipl.io
    - cast.multipl.io
    secretName: letsencrypt-production
  rules:
  - host: multipl.io
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: 7000
  - host: cast.multipl.io
    http:
      paths:
      # cast-user
      - path: /identity
        backend:
          serviceName: cast-user
          servicePort: 7000
      - path: /auth/twitter
        backend:
          serviceName: cast-user
          servicePort: 7000
      - path: /auth/twitter/callback
        backend:
          serviceName: cast-user
          servicePort: 7000
      - path: /logout
        backend:
          serviceName: cast-user
          servicePort: 7000

      # cast-user-mailgun
      - path: /unsubscribe/
        backend:
          serviceName: cast-user-mailgun
          servicePort: 7000

      # cast-render
      - path: /post/
        backend:
          serviceName: cast-render
          servicePort: 3000

      # cast-post
      - path: /publish/
        backend:
          serviceName: cast-post
          servicePort: 3000

      # Route everything else to website
      - backend:
          serviceName: cast-website
          servicePort: 7000
...
